# DuplicateImageFinder

./: README.md  pyproject.toml
dif/: finder.py  gui.py
tests/: test_duplicate_image_finder.py
